# gpt-experiments

./: generate_summary.py  pyproject.toml  visualise_results.py
prompts/: prompt_summary_neuro_system_electrophys.txt
